--- a/index.html
+++ b/index.html
@@ -18,15 +18,14 @@
     </div>
   </header>
   <div class="container">
-    <h1 class="title">Editable Table</h1>
     <table id="editableTable">
       <thead>
         <tr>
           <th>WINS</th>
-          <th>PLAYER</th>
+          <th>PLAYERS</th>
           <th>W</th>
           <th>$$</th>
-          <th>R</th>
+          <th>D</th>
         </tr>
       </thead>
       <tbody>
