--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Editable Table</title>
+  <title>Frankie's Poker Flips</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header class="header">
-    <div class="menu-icon">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
-    </div>
-    <div class="title-box">
-      <span>FRANKIE'S POKER FLIPS</span>
-    </div>
-  </header>
   <div class="container">
-    <table id="editableTable">
+    <div class="header">
+      <div class="menu-icon">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+      <div class="title-box">
+        <span>FRANKIE'S POKER FLIPS</span>
+      </div>
+    </div>
+    <table>
       <thead>
         <tr>
           <th>WINS</th>
