--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
         <span>FRANKIE'S POKER FLIPS</span>
       </div>
     </div>
+    <div class="chips">
+      <div class="chip red"><input type="text" value="$ 5"></div>
+      <div class="chip blue"><input type="text" value="$ 10"></div>
+      <div class="chip brown"><input type="text" value="$ 20"></div>
+      <div class="chip purple"><input type="text" value="$ 50"></div>
+      <div class="chip green"><input type="text" value="$ 100"></div>
+    </div>
     <table>
       <thead>
         <tr>
