--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
       <div class="chip purple"><input type="text" value="$ 50"></div>
       <div class="chip green"><input type="text" value="$ 100"></div>
     </div>
+    <div class="dark-blue-row">
+      <div class="description">
+        <span>GAMES</span><input type="text" value="" readonly>
+      </div>
+      <div class="description">
+        <span>PLAYERS</span><input type="text" value="" readonly>
+      </div>
+      <div class="description">
+        <span>$$</span><input type="text" value="">
+      </div>
+    </div>
     <table>
       <thead>
         <tr>
