--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </div>
     </div>
     <div class="chips">
-      <div class="chip red"><input type="text" value="$ 5"></div>
-      <div class="chip blue"><input type="text" value="$ 10"></div>
-      <div class="chip brown"><input type="text" value="$ 20"></div>
-      <div class="chip purple"><input type="text" value="$ 50"></div>
-      <div class="chip green"><input type="text" value="$ 100"></div>
+      <div class="chip red" data-value="$5"><span>$ 5</span></div>
+      <div class="chip blue" data-value="$10"><span>$ 10</span></div>
+      <div class="chip brown" data-value="$20"><span>$ 20</span></div>
+      <div class="chip purple" data-value="$50"><span>$ 50</span></div>
+      <div class="chip green" data-value="$100"><span>$ 100</span></div>
     </div>
     <div class="dark-blue-row">
       <div class="description">
@@ -33,7 +33,7 @@
         <span>PLAYERS</span><input type="text" value="" readonly>
       </div>
       <div class="description">
-        <span>$$</span><input type="text" value="">
+        <span>$$</span><input type="text" id="game-value" value="">
       </div>
     </div>
     <table>
