--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       </tbody>
     </table>
     <div class="buttons">
-      <button class="custom-button">PLAYERS</button>
-      <button class="custom-button">HISTORY</button>
-      <button class="custom-button">OTHER</button>
+      <button class="button-players">PLAYERS</button>
+      <button class="button-history">HISTORY</button>
+      <button class="button-other">OTHER</button>
     </div>
   </div>
   <script src="js/app.js"></script>
