--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       </div>
       <div class="title-box">
         <span>FRANKIE'S POKER FLIPS</span>
+        <span id="version-number" class="version-number"></span>
       </div>
     </div>
     <div class="chips">
@@ -51,9 +52,9 @@
       </tbody>
     </table>
     <div class="buttons">
-      <button class="button-players">PLAYERS</button>
-      <button class="button-history">HISTORY</button>
-      <button class="button-other">OTHER</button>
+      <button class="custom-button button-players">PLAYERS</button>
+      <button class="custom-button button-history">HISTORY</button>
+      <button class="custom-button button-other">OTHER</button>
     </div>
   </div>
   <script src="js/app.js"></script>
