--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       <button class="custom-button button-history">HISTORY</button>
       <button class="custom-button button-other">OTHER</button>
     </div>
+    <!-- Scroll position adjustment field -->
+    <div class="scroll-adjustment">
+      <label for="scroll-position">Scroll Position:</label>
+      <input type="number" id="scroll-position" value="0">
+      <button id="set-scroll">Set Scroll</button>
+    </div>
   </div>
   <script src="js/app.js"></script>
 </body>
