--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       </div>
       <div class="title-box">
         <span>FRANKIE'S POKER FLIPS</span>
-        <span id="version-number" class="version-number"></span>
       </div>
     </div>
     <div class="chips">
@@ -52,15 +51,9 @@
       </tbody>
     </table>
     <div class="buttons">
-      <button class="custom-button button-players">PLAYERS</button>
-      <button class="custom-button button-history">HISTORY</button>
-      <button class="custom-button button-other">OTHER</button>
-    </div>
-    <!-- Scroll position adjustment field -->
-    <div class="scroll-adjustment">
-      <label for="scroll-position">Scroll Position:</label>
-      <input type="number" id="scroll-position" value="0">
-      <button id="set-scroll">Set Scroll</button>
+      <button class="button-players">PLAYERS</button>
+      <button class="button-history">HISTORY</button>
+      <button class="button-other">OTHER</button>
     </div>
   </div>
   <script src="js/app.js"></script>
