--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <div class="title-box">
         <span>FRANKIE'S POKER FLIPS</span>
       </div>
+      <span id="version-number" class="version-number"></span>
     </div>
     <div class="chips">
       <div class="chip red" data-value="$5"><span>$ 5</span></div>
