--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="line"></div>
       </div>
       <div class="title-box">
-        <span>FRANKIE'S POKER FLIPS</span>
+        <span class="app-title">FRANKIE'S POKER FLIPSIES</span>
       </div>
       <span id="version-number" class="version-number"></span>
     </div>
