--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
         <div class="line"></div>
       </div>
       <div class="title-box">
-        <span class="app-title">FRANKIE'S POKER FLIPSIES</span>
+        <span class="app-title">FRANKIE'S POKER FLIPS</span>
       </div>
       <span id="version-number" class="version-number"></span>
     </div>
     <div class="chips">
-      <div class="chip red" data-value="$5"><span>$ 5</span></div>
-      <div class="chip blue" data-value="$10"><span>$ 10</span></div>
-      <div class="chip brown" data-value="$20"><span>$ 20</span></div>
-      <div class="chip purple" data-value="$50"><span>$ 50</span></div>
-      <div class="chip green" data-value="$100"><span>$ 100</span></div>
+      <div class="chip" data-value="$5"><img src="images/chip-5.png" alt="$5 chip"></div>
+      <div class="chip" data-value="$10"><img src="images/chip-10.png" alt="$10 chip"></div>
+      
+      <div class="chip" data-value="$20"><img src="images/chip-20.png" alt="$20 chip"></div>
+      <div class="chip" data-value="$50"><img src="images/chip-50.png" alt="$50 chip"></div>
+      <div class="chip" data-value="$100"><img src="images/chip-100.png" alt="$100 chip"></div>
     </div>
     <div class="dark-blue-row">
       <div class="description">
