--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       <button class="button-players">PLAYERS</button>
       <button class="button-history">HISTORY</button>
       <button class="button-other">OTHER</button>
+      <span id="version-number" class="version-number">v1.0</span>
     </div>
   </div>
   <script src="js/app.js"></script>
