--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="menu-icon">
         <div class="line"></div>
         <div class="line"></div>
-        <div class="line"></div>
+        <div the line"></div>
       </div>
       <div class="title-box">
         <span class="app-title">FRANKIE'S POKER FLIPS</span>
@@ -56,6 +56,9 @@
       <button class="button-other">OTHER</button>
       <span id="version-number" class="version-number">v1.0</span>
     </div>
+
+    <!-- Audio Element for the Chip Click Sound -->
+    <audio id="chip-sound" src="sounds/cachingChipValue.mp3" preload="auto"></audio>
   </div>
   <script src="js/app.js"></script>
 </body>
