--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </div>
 
     <!-- Audio Element for the Chip Click Sound -->
-    <audio id="chip-sound" src="sounds/cachingChipValue.mp3" preload="auto"></audio>
+    <audio id="chip-sound" src="sounds/caching-chip-value.mp3" preload="auto"></audio>
   </div>
   <script src="js/app.js"></script>
 </body>
